--- a/EllaSciFair/EllaSciFair.csproj
+++ b/EllaSciFair/EllaSciFair.csproj
@@ -12,6 +12,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.2" />
+    <PackageReference Include="PubSub" Version="4.0.2" />
   </ItemGroup>
 
 </Project>
