--- a/EllaSciFair/Properties/launchSettings.json
+++ b/EllaSciFair/Properties/launchSettings.json
@@ -12,11 +12,13 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7235;http://localhost:5008",
+      "applicationUrl": "http://localhost:5008",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
-    },
+    }
+    // "applicationUrl": "https://localhost:7235;http://localhost:5008",
+    ,
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
